align fixed

--- a/css/main.css
+++ b/css/main.css
@@ -129,22 +129,17 @@ html,body{
 /* -------------- Plants Section -------------- */
 
 #plant-image{
-   display: block;
    width: 320px;
    height: 320px;
-   margin-left: auto;
-   margin-right: auto;
-   margin-top: 10%; 
-
-   background: blue;
-
+   margin-top: 5%;
+   
 }
 
 #plants-section{
-    display: flexbox;
+    display: inline-block;
+    text-align: center;
     width: 100%;
     height: 100%;
-    background: red;
     
 }
 
@@ -155,7 +150,7 @@ html,body{
     background:rgb(58, 68, 82);
     border-top-right-radius: 15%;
     border-top-left-radius: 15%;
-    margin-top: 5%;
+    /* margin-top: 5%; */
     bottom: 0px;
 }
 
@@ -166,6 +161,10 @@ html,body{
     color: ivory;
     margin-left: auto;
     margin-right: auto;
+}
+
+#plant-name{
+    margin-top: 1%;
 }
 
 #buttonsdiv{
